<pre>
2008-08-16:
    * version 2.0 (probably)
    * allow :dialog to open the cookies manager
    * add 'loadplugins' option
    * add count support to C-^ (Kazuo)
    * add 'eventignore' option
    * add :tabdetach command
    * new ;b extended hint mode (thanks Daniel Schaffrath)
    * many bug fixes

2008-08-16:
    * version 1.2
    * IMPORTANT: changed :command to behave like Vim's version.
      Eg. An alert command specified previously as
          :command AlertMe alert(args)
      should now be defined as
          :command AlertMe :js alert(<args>)
    * IMPORTANT: changed (again) the default keybinding to temporarily disable all
      Vimperator keybindings from ctrl-q to ctrl-z since many users complained
      about hitting ctrl-q twice and exiting vimperator
    * IMPORTANT: removed old :buffers! buffer window, as it was ugly and slightly broken
      use "B" or :buffers instead
    * IMPORTANT: input fields are not blured anymore by default after a page has loaded
      use :set [no]focuscontent to control the behavior (thanks Paul Sobey for the 
      generous donation which made this behavior possible)
    * IMPORTANT: ctrl-x/a never take possible negative URLs into account, it was just
      too unpredictable
    * performance fix by using cached history, should save about 5ms on each pageload
    * add :emenu for accessing the Firefox main menu items from the command line
    * add 'shell' and 'shellcmdflag' options
    * :tabprevious, :bprevious, :tabnext, :bnext and friends now accept a prefix count
    * add :comclear and :delcommand
    * add a special version to :hardcopy to skip the Print dialog
    * add :bl[ast], :bf[irst], :br[ewind] to go to first/last tab
    * add :bn[ext], :bp[revious], :bN[ext] to switch to next/previous tab
    * add :pagestyle command to allow for switching between alternate style sheets
    * add :b# to select the alternate buffer
    * add :tabduplicate command 